# Satisfactorio

./: .gitattributes  .gitignore  Cargo.toml  LICENCE.txt  Makefile  README.md  makefile  readme.md  rust-analyzer.json  rustfmt.toml
.zed/: settings.json
_apart/: .roadmap_strachy.txt  manager.rs  old_texture.rs
_notice/: compile.txt  controls.txt
assets/: la GROSSE bite à Clément là, miam miam xDDD.txt
assets/shaders/: shader.wgsl  ui.wgsl
client/: Cargo.toml  game.rs  lib.rs  main.rs
client/api/: texture_loader.rs
client/network/: manager.rs  protocol.rs
client/physics/: body.rs  collision.rs
client/player/: camera.rs  player.rs  remote_players.rs
client/player/controllers/: mod.rs  spectator.rs  walk.rs
client/render/meshing/: chunk.rs  processor.rs  world.rs
client/render/utils/: padded_chunk.rs
client/src/: lib.rs  main.rs
client/src/common/geometry/: direction.rs  vertex.rs
client/src/common/utils/: mod.rs  updatable.rs
client/src/engine/: mod.rs
client/src/engine/audio/: audio_manager.rs  mod.rs
client/src/engine/core/: application.rs  frame.rs  mod.rs  state.rs
client/src/engine/core/gpu/: bind_group.rs  factory.rs  mod.rs  pipeline.rs
client/src/engine/gpu/: context.rs  factory.rs  layouts.rs  mod.rs  tools.rs
client/src/engine/gpu/resources/: bind_group.rs  mod.rs  pipeline.rs  resources.rs
client/src/engine/network/: client.rs  mod.rs  network.rs  network_client.rs
client/src/engine/render/: camera.rs  debug.rs  manager.rs  mod.rs  options.rs  render.rs  texture.rs
client/src/engine/render/mesh/: manager.rs  mesh.rs  mod.rs  texto.rs
client/src/engine/render/text/: text_renderer.rs
client/src/engine/render/textures/: array.rs
client/src/engine/render/utils/: mod.rs  smart_buffer.rs  standalone_buffer.rs
client/src/game/: game.rs  mod.rs  network.rs
client/src/game/api/: texture_loader.rs
client/src/game/network/: manager.rs  mod.rs  protocol.rs
client/src/game/physics/: aabb.rs  body.rs  collision.rs  mod.rs
client/src/game/player/: camera.rs  mod.rs  player.rs  remote_players.rs
client/src/game/player/controllers/: free.rs  mod.rs  spectator.rs  walk.rs
client/src/game/render/: mod.rs
client/src/game/render/meshing/: chunk.rs  mod.rs  processor.rs  world.rs
client/src/game/render/utils/: face_mask.rs  mod.rs  padded_chunk.rs
client/src/game/state/: game.rs
client/src/game/systems/: inputs.rs  mod.rs  texture_registry.rs
client/src/game/world/: chunk.rs  mod.rs  padded_chunk.rs  world.rs
client/src/game/world/data/: chunk.rs
client/src/game/world/generation/: chunk.rs
client/systems/: inputs.rs  texture_registry.rs
client/world/: world.rs
engine/: Cargo.toml  lib.rs
engine/core/: application.rs  frame.rs  state.rs
engine/geometry/: vertex.rs
engine/gpu/: context.rs  layouts.rs  mod.rs  smart_buffer.rs
engine/gpu/allocator/: alloc_error.rs  data_structures.rs  gap.rs  gpu_allocator.rs  mod.rs  write_operation.rs
engine/gpu/factories/: bind_group.rs  mod.rs  pipeline.rs  wrapper.rs
engine/gpu/resources/: pipeline.rs  wrapper.rs
engine/gpu/textures/: array.rs  atlas.rs  id.rs  manager.rs  mod.rs
engine/render/: camera.rs  debug.rs  manager.rs  mod.rs  modes.rs  render.rs
engine/render/mesh/: manager.rs
engine/render/text/: text_renderer.rs
engine/render/ui/: mod.rs  render.rs
engine/render/ui/geometry/: ui_vertex.rs
engine/render/ui/interpreter/: compiler.rs  translator.rs
engine/render/ui/widgets/: mod.rs  panel.rs
engine/render/utils/: smart_buffer.rs
game/: Cargo.toml  constants.rs  lib.rs  tests.rs
game/inventory/: mod.rs  tests.rs
game/world/: mod.rs  modified_chunk.rs  raycast.rs
game/world/data/: block.rs  chunk.rs
game/world/generation/: chunk.rs  chunk_generator.rs  mod.rs
launcher/: Cargo.toml
launcher/src/: app.rs  launch.rs  main.rs
network/: Cargo.toml  client_connection.rs  lib.rs  messages.rs  mod.rs  tests.rs  traits.rs
physics/: Cargo.toml  aabb.rs  body.rs  collision.rs  position.rs  validator.rs
project_core/: lib.rs  parallel.rs
project_core/utils/: unique_queue.rs
satiscore/: Cargo.toml  constants.rs  lib.rs  parallel.rs  tests.rs
satiscore/geometry/: mod.rs
satiscore/utils/: data_manager.rs  mod.rs  unique_queue.rs
satiscore/world/data/: block.rs  chunk.rs
server/: Cargo.toml
server/src/: broadcast.rs  chunk_generator.rs  client.rs  identity.rs  lib.rs  main.rs  network.rs  persistence.rs  player.rs  server.rs  state.rs  tests.rs  world.rs
server/src/game/: handler.rs  mod.rs  validator.rs
server/src/network/: connection.rs  mod.rs
server/src/network_server/: connection.rs
server/src/tui/: app.rs  bridge.rs  log.rs  mod.rs
shared/: Cargo.toml
shared/src/: buffer_pool.rs  constants.rs  lib.rs  parallel.rs  tests.rs
shared/src/geometry/: corner.rs  direction.rs  mod.rs  plane.rs  vertex.rs
shared/src/network/: crypto.rs  error.rs  messages.rs  mod.rs  network_protocol.rs  traits.rs
shared/src/utils/: unique_queue.rs
shared/src/world/: constants.rs  mod.rs  modified_chunk.rs  raycast.rs
shared/src/world/data/: block.rs  chunk.rs
shared/src/world/generation/: chunk.rs  chunk_generator.rs
src/: CONTROLS.txt  camera.rs  debug_controls.rs  main.rs  movement.rs  player.rs  shader.wgsl  state.rs  world.rs
src/common/geometry/: direction.rs  mod.rs  vertex.rs
src/common/utils/: parallel.rs  updatable.rs
src/engine/: mod.rs
src/engine/audio/: audio_manager.rs
src/engine/core/: application.rs  inputs.rs  mod.rs  state.rs
src/engine/render/: camera.rs  geometry.rs  mesh.rs  mod.rs  render.rs  texture.rs
src/engine/render/mesh/: chunk.rs  face_mask.rs  world.rs
src/engine/render/text/: text_renderer.rs
src/game/: mod.rs
src/game/player/: camera.rs  player.rs
src/game/state/: game.rs
src/game/world/: block.rs  chunk.rs  chunk_generator.rs  mod.rs  padded_chunk.rs  world.rs
src/world_generator/: chunks.rs  world_gen.rs
src/world_generator_beta/: mesh.rs  mod.rs  perlin.rs
