[workspace]
members = ["launcher", "shared", "client", "server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["StrachyDev", "Theora59-dev"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = {version = "0.11.0"}
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "io-util", "time", "rt"] }

[profile.dev]
debug = true
opt-level = 1
codegen-units = 256
incremental = true
lto = false
strip = false

[profile.release]
debug = false
opt-level = 3
codegen-units = 1
incremental = false
lto = true
strip = true

[profile.flamegraph]
inherits = "dev"
# opt-level = 3
