[workspace]
members = [
    "client",
    "project_core",
    "engine",
    "game",
    "launcher",
    "network",
    "physics",
    "server"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["StrachyDev", "Theora59-dev"]

[workspace.dependencies]
serde = { version = "1", default-features = false, features = ["derive", "std"] }
sha2 = "0.11.0"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "sync", "macros", "io-util", "time", "rt", "fs"] }
bincode = "1.3"
getrandom = "0.2"
noise = "0.9.0"
num_cpus = "1.17.0"
aes-gcm = "0.10.3"
cgmath = "0.18.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
rustc-hash = "2.1.2"
rayon = "1.12.0"
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = { version = "0.10", default-features = false, features = ["auto-color", "humantime"] }
wgpu = { version = "29", default-features = false, features = ["wgsl", "vulkan", "gles"] } # ATTENTION: dx12, metal, webgpu ne sont pas inclus
winit = "0.30.13"
kira = { version = "0.12.0", default-features = false, features = ["cpal", "mp3"] }
wgpu_text = "29.0.3"
pollster = "0.4.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }

[profile.dev]
debug = true
opt-level = 1
codegen-units = 256
incremental = true
lto = false
strip = false

[profile.dev.package.noise]
opt-level = 3

[profile.release]
debug = false
opt-level = 3
codegen-units = 1
incremental = false
lto = true
strip = true

[profile.flamegraph]
inherits = "release"
debug = 2
opt-level = 2
codegen-units = 4
incremental = true
lto = false
strip = false
