[package]
name = "client"
version.workspace = true
edition.workspace = true

[features]
default = ["client"]
client = []

[lib]
path = "lib.rs"

[[bin]]
name = "Satisfactorio"
path = "main.rs"

[dependencies]
image = { version = "0.24", default-features = false, features = ["png"] }
kira = "0.12.0"
anyhow = "1.0"
winit = { version = "0.30" }
env_logger = "0.10"
log = "0.4"
wgpu = "28.0"
pollster = "0.3"
bytemuck = "1.25.0"
cgmath = "0.18.0"
wgpu_text = "28.0"
num_cpus = "1.17.0"
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }

satiscore = { version = "0.1.0", path = "../satiscore" }
engine = { version = "0.1.0", path = "../engine" }
network = { version = "0.1.0", path = "../network" }
physics = { path = "../physics", features = ["client"] }
rustc-hash = "2.1.2"
spin_sleep = "1.3.3"
