[package]
name = "client"
version.workspace = true
edition.workspace = true

[features]
default = ["client"]
client = []

[lib]
path = "lib.rs"

[[bin]]
name = "Ascendustry"
path = "main.rs"

[dependencies]
cgmath = { workspace = true }
bytemuck = { workspace = true }
rustc-hash = { workspace = true }
winit = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
num_cpus = { workspace = true }
image = { version = "0.25.10", default-features = false, features = ["png"] }
anyhow = { workspace = true }
spin_sleep = "1.3.3"

project_core = { path = "../project_core" }
game = { path = "../game" }
engine = { path = "../engine" }
network = { path = "../network" }
physics = { path = "../physics", features = ["client"] }
bincode.workspace = true
