[package]
name = "engine"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[features]
server = []
client = []

[dependencies]
cgmath = { workspace = true }
bytemuck = { workspace = true }
rustc-hash = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
kira = { workspace = true }
wgpu_text = { workspace = true }
pollster = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
satiscore = { path = "../satiscore" }
network = { path = "../network" }
game = { path = "../game" }
image = { version = "0.24", default-features = false, features = ["png"] }
