[package]
name = "engine"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[features]
server = []
client = []

[dependencies]
cgmath = { workspace = true }
bytemuck = { workspace = true }
rustc-hash = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
kira = { workspace = true }
wgpu_text = { workspace = true }
pollster = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }
project_core = { path = "../project_core" }
network = { path = "../network" }
game = { path = "../game" }

# log = { workspace = true }