[package]
name = "launcher"
version.workspace = true
edition.workspace = true

[[bin]]
name = "launcher"
path = "src/main.rs"

[features]
default = ["launcher"]
launcher = []

[dependencies]
server = { path = "../server", default-features = false, features = ["server"] }
client = { path = "../client" }
network = { path = "../network" }
tokio = { workspace = true }
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "wgpu", "x11"] }
