[package]
name = "network"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[features]
server = []
client = []

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
sha2 = { workspace = true }
getrandom = { workspace = true }
aes-gcm = { workspace = true }
log = { workspace = true }
