[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[features]
default = ["server"]
server = []

[dependencies]
cgmath = "0.18.0"

tokio = { workspace = true }
serde = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.102"
rand = "0.8"

shared = { path = "../shared" }
