[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "server"
path = "src/lib.rs"

[features]
default = ["server"]
server = []

[dependencies]
cgmath = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
rand = "0.8"
log = { workspace = true }
env_logger = { workspace = true }

satiscore = { path = "../satiscore" }
game = { path = "../game" }
network = { path = "../network" }
physics = { path = "../physics", features = ["server"] }
bincode.workspace = true
rustc-hash.workspace = true
