[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "server"
path = "src/lib.rs"

[features]
default = ["server", "tui"]
server = []
tui = ["ratatui", "crossterm"]

[dependencies]
cgmath = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
rand = "0.8"

project_core = { path = "../project_core" }
game = { path = "../game" }
network = { path = "../network" }
physics = { path = "../physics", features = ["server"] }
bincode.workspace = true
rustc-hash.workspace = true
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
