[package]
name = "shared"
version.workspace = true
edition.workspace = true

[features]
server = []
client = []

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
getrandom = "0.2"
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
noise = "0.9.0"
num_cpus = "1.17.0"
